--- a/src/component/category-item/category-item.styles.scss
+++ b/src/component/category-item/category-item.styles.scss
@@ -52,7 +52,8 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
-
+    text-transform: uppercase;
+    
     h2 {
       font-weight: bold;
       margin: 0 6px 0;
